--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@openemp-mf/styleguide": "github:honohunter/openemp-ui-styleguide#alpha",
+    "@openemp-mf/styleguide": "file:../openemp-ui-styleguide",
     "@reach/router": "1.3.3",
     "clsx": "^1.1.0",
     "nanoevents": "^5.1.7",
